[package]
name = "defguard_enterprise_db"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
defguard_common = { workspace = true }
defguard_enterprise_license = { workspace = true }
chrono = { workspace = true }
ipnetwork = { workspace = true }
model_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha256 = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
struct-patch = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
