[package]
name = "defguard_enterprise_firewall"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
defguard_common = { workspace = true }
defguard_enterprise_db = { workspace = true }
defguard_enterprise_license = { workspace = true }
defguard_proto = { workspace = true }
ipnetwork = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
rand = { workspace = true }
