[package]
name = "defguard_enterprise_ldap"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
defguard_common = { workspace = true }
defguard_enterprise_license = { workspace = true }
base64 = { workspace = true }
ldap3 = { workspace = true }
md4 = { workspace = true }
rand = { workspace = true }
sha1 = { version = "0.10", package = "sha-1" }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
