[package]
name = "defguard_enterprise_license"
version = "0.0.0"
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
defguard_common = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
pgp = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
